# VRTX

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: Application.cpp  Application.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  D3D12Context.cpp  D3D12Context.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  d3dx12_minimal.h
src/input/: Input.cpp  Input.h
src/math/: Mat4.h  Vec3.h
src/physics/: Constraint.h  PhysicsWorld.cpp  PhysicsWorld.h  SpatialGrid.h  VerletBody.h
src/shaders/: ContainerShader.hlsl  InstancedRenderer.hlsl  PhysicsCompute.hlsl
